devel
+ new internal initialization method for analytic potential functions
+ don't move the binary if BIN_DIR is empty
+ validate parameters from parameter file after initialization
+ add auto_t feature for simann, enable with "anneal_temp auto"
+ the error sum is now calculated as w*d^2 and no longer as (w*d)^2
+ added the proper citations to most of the analytic potential functions
+ [APOT] the pohlong potential has been renamed to "bjs" to credit the original author
  pohlong can still be used for compatibility with older potential files
+ fixed a bug where not the latest value of the global parameters was used to write the
  imd potentials
+ add compatibility mode for old (w*d)^2 error sum, enable with compat flag
+ adjust copyright years to 2011
+ lots of code clean-up
+ move analytic function to their own header file
+ abort if anneal_temp is missing in parameter file
+ update comments
+ revert the r=0 fix in spline calculation
+ make simann the default algorithm for all potentials, evo is still
  available via _evo_ compile option
+ comments are now allowed in potential files between blocks, starting with #
+ [ADP] fix writing for the quadrupole potential for systems with more than one atom type
+ [APOT] fix bug with chemical potentials and global parameters
+ [EVO] change initialization for tabulated potentials
+ timing information is now shown if output_prefix is not set

dipole
+ enhanced output for dipole-convergency
+ elstat parameter dp_kappa can now be optimized
+ new outout coul2imd now available
+ new short-range potential (Buckingham) now available for electrostatic

--> POTFIT-20101207 released

devel-20101207
+ properly check for the correct potential types
+ remove some unneeded variables

devel-20101201
+ increase the epsilon for the powell_lsq from 0.0001 to 0.001
+ added line numbers for errors in config files
+ error() and warning() functions can now be used with arguments like printf

devel-20101122